--- a/booking.html
+++ b/booking.html
@@ -58,15 +58,15 @@
     <div class="grid">
       <div class="card animate-fade-in">
         <p>"WeddingPlanner made our dream wedding come true! Their attention to detail was incredible."</p>
-        <p><strong>- Sarah & Ahmed</strong></p>
+        <p><strong>- Mohamed & Fathima </strong></p>
       </div>
       <div class="card animate-fade-in">
         <p>"The team was professional and supportive throughout the entire process. Highly recommended!"</p>
-        <p><strong>- Fatima & Ali</strong></p>
+        <p><strong>- Fathima & Ali</strong></p>
       </div>
       <div class="card animate-fade-in">
         <p>"From the decor to the timeline, everything was perfect. Thank you, WeddingPlanner!"</p>
-        <p><strong>- Aisha & Omar</strong></p>
+        <p><strong>- Ahamed & Ayisha</strong></p>
       </div>
     </div>
   </section>
