--- a/contact.html
+++ b/contact.html
@@ -29,11 +29,11 @@
     <div class="contact-info">
       <div class="info-card">
         <h3>Address</h3>
-        <p>123 Wedding Street, Dream City, DC 12345</p>
+        <p>South Eastern University (SEUSL), Oluvil</p>
       </div>
       <div class="info-card">
         <h3>Phone</h3>
-        <p>+1 (123) 456-7890</p>
+        <p>+94 77 1234 567</p>
       </div>
       <div class="info-card">
         <h3>Email</h3>
