--- a/contact.html
+++ b/contact.html
@@ -50,20 +50,65 @@
   </section>
 
   <section class="team">
-    <h2>Our Web Team</h2>
+    <h2>Our Web Development Team</h2>
     <p>Meet the talented team behind WeddingPlanner site who will manage all your orders.</p>
     <div class="grid">
       <div class="card animate-fade-in">
-        <img src="images/team1.jpg" alt="Team Member 1">
-        <p><strong>Aisha Khan</strong><br>Lead Wedding Planner</p>
+        <img src="images/hij.jpg" alt="Team Member 1">
+        <p><strong>SEU/IS/21/AT/177</strong><br>MF. Samri</p>
       </div>
       <div class="card animate-fade-in">
-        <img src="images/team2.jpeg" alt="Team Member 2">
-        <p><strong>Fatima Ahmed</strong><br>Event Coordinator</p>
+        <img src="images/hij.jpg" alt="Team Member 2">
+        <p><strong>SEU/IS/21/AT/266  </strong><br>MIF. Rifthiya</p>
       </div>
       <div class="card animate-fade-in">
-        <img src="images/team3.jpg" alt="Team Member 3">
-        <p><strong>Zainab Ali</strong><br>Decor Specialist</p>
+        <img src="images/hij.jpg" alt="Team Member 3">
+        <p><strong>SEU/IS/21/AT/267 </strong><br>MM.Hosni</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/hij.jpg" alt="Team Member 4">
+        <p><strong>SEU/IS/21/AT/268  </strong><br>MHI.Jana</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/hij.jpg" alt="Team Member 5">
+        <p><strong>SEU/IS/21/AT/270 </strong><br> MAC.Benusha</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/hij.jpg" alt="Team Member 6">
+        <p><strong>SEU/IS/21/AT/271 </strong><br>S.Amna Hifa</p>
+      </div>
+    </div>
+  </section>
+  <p></p>
+  <section class="team">
+    <div class="grid">
+      <div class="card animate-fade-in">
+        <img src="images/hij.jpg" alt="Team Member 7">
+        <p><strong>SEU/IS/21/AT/275 </strong><br>MRF.Hinfa</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/hij.jpg" alt="Team Member 8">
+        <p><strong>SEU/IS/21/AT/277  </strong><br>A.Afroj Natha</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/hij.jpg" alt="Team Member 9">
+        <p><strong>SEU/IS/21/AT 285  </strong><br>MNF.Samla</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/hij.jpg" alt="Team Member 10">
+        <p><strong>SEU/IS/21/AT/286  </strong><br>R.Simani</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/hij.jpg" alt="Team Member 11">
+        <p><strong>SEU/IS/21/AT/347  </strong><br>N.Nitha Farwin</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/hij.jpg" alt="Team Member 12">
+        <p><strong>SEU/IS/21/AT/348  </strong><br>A.Anatmery</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/ms2.jpg" alt="Team Member 13">
+        <p><strong>SEU/IS/21/AT/367 </strong><br>M.I.A.Sakeeb</p>
       </div>
     </div>
   </section>
