--- a/dresses.html
+++ b/dresses.html
@@ -37,6 +37,66 @@
         <img src="images/dress3.jpg" alt="Dress 3">
         <p>Modern Bridal Wear</p>
       </div>
+      <div class="card animate-fade-in">
+        <img src="images/dress4.jpg" alt="Dress 4">
+        <p>Embroidered Abaya</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/dress5.jpg" alt="Dress 5">
+        <p>Lace Hijab Dress</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/dress6.jpg" alt="Dress 6">
+        <p>Velvet Bridal Gown</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/dress7.jpg" alt="Dress 7">
+        <p>Silk Kaftan Dress</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/dress8.jpg" alt="Dress 8">
+        <p>Pearl-Embellished Dress</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/dress9.jpg" alt="Dress 9">
+        <p>Gold-Threaded Gown</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/dress10.jpg" alt="Dress 10">
+        <p>Floral Hijab Dress</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/dress11.jpg" alt="Dress 11">
+        <p>Royal Blue Abaya</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/dress12.jpg" alt="Dress 12">
+        <p>Silver Sequined Dress</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/dress13.jpg" alt="Dress 13">
+        <p>Classic White Gown</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/dress14.jpg" alt="Dress 14">
+        <p>Two-Piece Bridal Set</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/dress15.jpg" alt="Dress 15">
+        <p>Beaded Cape Dress</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/dress16.jpg" alt="Dress 16">
+        <p>Crystal-Embellished Gown</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/dress17.jpg" alt="Dress 17">
+        <p>Pastel Hijab Dress</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/dress18.jpg" alt="Dress 18">
+        <p>Regal Maroon Abaya</p>
+      </div>
     </div>
   </section>
 
