stage and about

--- a/about.html
+++ b/about.html
@@ -37,15 +37,15 @@
     <div class="grid">
       <div class="card animate-fade-in">
         <img src="images/team11.jpg" alt="Team Member 1">
-        <p><strong>Fathima Ayisha</strong><br>Lead Wedding Planner</p>
+        <p><strong>Samri Rifthiya </strong><br>Lead Wedding Planner</p>
       </div>
       <div class="card animate-fade-in">
         <img src="images/team2.jpeg" alt="Team Member 2">
-        <p><strong>Fathima Daniya</strong><br>Event Coordinator</p>
+        <p><strong>Hosni Jana </strong><br>Event Coordinator</p>
       </div>
       <div class="card animate-fade-in">
         <img src="images/team3.jpg" alt="Team Member 3">
-        <p><strong>Zainab Masood</strong><br>Decor Specialist</p>
+        <p><strong>Benusha Hifa</strong><br>Decor Specialist</p>
       </div>
     </div>
   </section>
