--- a/stage.html
+++ b/stage.html
@@ -37,6 +37,42 @@
         <img src="images/stage3.jpg" alt="Stage 3">
         <p>Floral Decor</p>
       </div>
+      <div class="card animate-fade-in">
+        <img src="images/stage4.jpg" alt="Stage 4">
+        <p>Gold and Maroon Theme</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/stage5.jpg" alt="Stage 5">
+        <p>Luxury Crystal Decor</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/stage6.jpg" alt="Stage 6">
+        <p>Elegant White and Gold</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/stage7.jpg" alt="Stage 7">
+        <p>Traditional Islamic Design</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/stage8.jpg" alt="Stage 8">
+        <p>Modern Geometric Patterns</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/stage9.jpg" alt="Stage 9">
+        <p>Rustic Wooden Theme</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/stage10.jpg" alt="Stage 10">
+        <p>Pastel Dream Theme</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/stage11.jpg" alt="Stage 11">
+        <p>Grand Chandelier Setup</p>
+      </div>
+      <div class="card animate-fade-in">
+        <img src="images/stage12.jpg" alt="Stage 12">
+        <p>Enchanted Garden Theme</p>
+      </div>
     </div>
   </section>
 
